--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-switch": "^1.5.1"
+    "react-native-switch": "^1.5.1",
+    "@react-native-masked-view/masked-view": "0.2.8"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
