--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/native-stack": "^6.9.10",
     "expo": "~47.0.12",
+    "expo-checkbox": "~2.2.2",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-mask-text": "^0.13.1",
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-switch": "^1.5.1",
-    "expo-checkbox": "~2.2.2",
-    "expo-image-picker": "~14.0.2"
+    "react-native-switch": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
