--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-paper": "^5.2.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-switch": "^1.5.1"
+    "react-native-switch": "^1.5.1",
+    "expo-updates": "~0.15.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
